[tool.poetry]
name = "mst-overview"
version = "0.1.0"
description = ""
authors = ["konstin <konstin@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.11.1"
pandas = "^1.0.3"
pyyaml = "^5.3.1"
mkdocs = "^1.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
