[tool.poetry]
name = "mst-overview"
version = "0.1.0"
description = "Generates the city overview for https://meine-stadt-transparent.de/"
authors = ["konstin <konstin@mailbox.org>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
Jinja2 = "^3.0.1"
pandas = "^1.0.3"
pyyaml = "^5.3.1"
mkdocs = "^1.1"

[tool.poetry.dev-dependencies]
black = "21.6b0"

[build-system]
requires = ["poetry-core~=1.1.0"]
build-backend = "poetry.core.masonry.api"